# matlon

./: README.md  andri.html  andri_cv.html  bringo.html  docgpt.html  imprint.html  index.html  model.html  mts.html  publicsecrets.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  tlqrbill.html
.github/workflows/: deploy.yaml  quarto-ghp-action.yaml  test.yaml
matlon/: _modidx.py  model.py
nbs/: 01_mts.ipynb  02_tlqrbill.ipynb  03_bringo.ipynb  05_docGPT.ipynb  05_model.ipynb  10_andri.ipynb  11_andri_cv.ipynb  20_whatsapp_converter.ipynb  90_imprint.ipynb  95_model.ipynb  _quarto.yml  dino-stampf-deep-learning.md  gschichtefritz-affiliate.mmd  gschichtefritz.ch-current.mmd  gschichtefritz.ch-legacy.mmd  gschichtefritz.md  index.ipynb  nbdev.yml  projects.json  publicsecrets.md  publicsecrets.mmd  running-wheel-tracker.mmd  sidebar.yml  visualmix.mmd  wiimidii.mmd
quarto-ghp/: action.yaml
